UX fixes Removed the odd spacing. Converted "table" image to a table.

--- a/styles/ux.scss
+++ b/styles/ux.scss
@@ -7,10 +7,13 @@ body>article img.borderless {
     padding: 0px;
     margin: 0px 20px 0px 0px;
     max-width: 100%;
-}
-body>article img.borderless.clear
-{
-	margin-bottom: 1em;
+	&.clear
+	{
+		margin-bottom: 1em;
+	}
+	&.nomargin{
+		margin-right: 0px;
+	}	
 }
 
 /* allow clear the floating of images in the UX design section */
@@ -19,6 +22,15 @@ footer, .clear, h2, h3, h5, body>article *.clear::after
 	content: '';
 	display: block;
 	clear: both;
+}
+
+span.correct
+{
+	color: green;
+}
+span.incorrect
+{
+	color: red;
 }
 
 @media screen and (min-width: 610px)
